<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SimLiKar</string>
    <string name="search_hint">Enter address or name</string>
    <string name="create">Create</string>
    <string name="ill_card">Ambulance card</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="main_data">Main data</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth date</string>
    <string name="insurance_group">Insurance group</string>
    <string name="insurance_num">Insurance number</string>
    <string name="save">Save</string>
    <string name="signal_data">Signal data</string>
    <string name="blood_group">Blood group</string>
    <string name="rh_factor_hint">Rh factor</string>
    <string name="transfusions">Blood transfusions</string>
    <string name="diabetes">Diabetes mellitus</string>
    <string name="infection_diseases">Infection diseases</string>
    <string name="surgery_cases">Surgery cases</string>
    <string name="allergic_anamnesis">Allergic anamnesis</string>
    <string name="drug_intolerance">Drug intolerance</string>
    <string name="error_already_exists">Error: Patient exists</string>
    <string name="work_address">Work address</string>
    <string name="street_hint">st.</string>
    <string name="street">Street</string>
    <string name="flat_hint">fl.</string>
    <string name="flat_num">Flat num</string>
    <string name="live_address">Live address</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="logging_in">Logging in...</string>
    <string name="wait_please">Please wait...</string>
    <string name="fio">FIO</string>
    <string name="city">City</string>
    <string name="street_num">House</string>
    <string name="show_patient">Show</string>
    <string name="date_accessed">Date accessed</string>
    <string name="diagnosis_list">Final diagnosis list</string>
    <string name="final_diagnosis">Final diagnosis</string>
    <string name="first_diagnosis">First time diagnosis</string>
    <string name="with_prof_overview">With prof overview</string>
    <string name="doctor_fio">Doctor\'s FIO</string>
    <string name="living_here">Living Here:</string>
    <string name="login_error">Invalid username and/or password</string>
    <string name="error_cannot_save">Cannot save to database!</string>
    <string name="success_create">Successfully created patient!</string>
    <string name="success_save">Successfully saved patient!</string>
    <string name="connecting_to_card">Connecting to patient card</string>
    <string name="unwork_data">Temporary unwork time</string>
    <string name="unwork_list_num">Unwork list number</string>
    <string name="unwork_date">Issue date</string>
    <string name="unwork_close_date">List close date</string>
    <string name="unwork_final_diagnosis">Final diagnosis</string>
    <string name="prof_survey">Profilactic survey list</string>
    <string name="fluorography">Fluorography</string>
    <string name="gynecologist">Gynecologist survey</string>
    <string name="cytological">Cytological analysis</string>
    <string name="boobs">Breasts survey</string>
    <string name="surgery">Surgery survey</string>
    <string name="vaccination_list">Vaccination list</string>
    <string name="vaccination_name">Vaccina name</string>
    <string name="vaccination_date">Vaccination date</string>
    <string name="vaccination_age">Patient age</string>
    <string name="vaccination_dose">Vaccination dose</string>
    <string name="vaccination_serial">Vaccina serial</string>
    <string name="vaccination_title">Title</string>
    <string name="inject_type">Inject type</string>
    <string name="inject_reaction">Inject reaction</string>
    <string name="med_contraindications">Medical contraindications</string>
    <string name="hospital_info">Hospital info</string>
    <string name="hospital_date">Date of hospitalization</string>
    <string name="hospital_org">Hospital organization</string>
    <string name="hospital_final_diagnosis">Final diagnosis</string>
    <string name="patient_diary">Patient diary</string>
    <string name="call_date">Call date</string>
    <string name="treatment_place">Place of treatment</string>
    <string name="complaints">Patient\'s complaints</string>
    <string name="doctor_appointment">Appointment of doctor</string>
    <string name="yearly_epicrisis">Yearly epicrisis</string>
    <string name="yearly_epicrisis_date">Date of epicrisis</string>
    <string name="disease_consider">Diseases considered</string>
    <string name="main_diagnosis">Main diagnosis</string>
    <string name="following_diagnosis">Following diagnoses</string>
    <string name="relapse_count">Relapse count during year</string>
    <string name="treatment">Treatment</string>
    <string name="disabled_group">Disabled group</string>
    <string name="treatment_sanatorium">Sanatorium treatment</string>
    <string name="reabilitation">Reabilitation</string>
    <string name="nextyear_plan">Plan for next year</string>
    <string name="specs_surveyed">Specialists surveyed</string>
    <string name="fio_YYMM">Doctor FIO, year and month</string>
    <string name="research">Research processed</string>
    <string name="medic_treatment">Preparation treatment</string>
    <string name="cab">Cabinet</string>
    <string name="date">Date of survey</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>