<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/diagnosis_list"
        android:id="@+id/diagnosis_list_hint"
        android:gravity="center_horizontal"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_accessed"
        android:id="@+id/date_accessed_hint"
        android:layout_gravity="left|center_vertical"
        android:textColor="@android:color/white"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/date_accessed"
        android:hint="@string/date_accessed"
        android:inputType="date"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_diagnosis"
        android:id="@+id/final_diagnosis_hint"
        android:textColor="@android:color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/final_diagnosis"
        android:hint="@string/final_diagnosis"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_diagnosis"
        android:id="@+id/first_diagnosis_hint"
        android:textColor="@android:color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first_diagnosis"
        android:hint="@string/first_diagnosis"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/with_prof_overview"
        android:id="@+id/with_prof_overview_hint"
        android:layout_gravity="left|center_vertical"
        android:textColor="@android:color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/with_prof_overview"
        android:hint="@string/with_prof_overview"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctor_fio"
        android:id="@+id/doctor_fio_hint"
        android:layout_gravity="left|center_vertical"
        android:textColor="@android:color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/doctor_fio"
        android:hint="@string/doctor_fio"
        android:inputType="textCapWords"/>

</merge>